--- a/app/src/main/res/layout/fragment_jokes.xml
+++ b/app/src/main/res/layout/fragment_jokes.xml
@@ -14,6 +14,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".JokesFragment">
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            app:itemTextColor="@color/black"
+            app:itemIconTint="@color/black"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:menu="@menu/bottom_navigation_menu"
+            style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"/>
 
         <androidx.cardview.widget.CardView
             android:layout_width="300dp"
@@ -116,7 +126,7 @@
 
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginHorizontal="32dp"
-            android:layout_marginBottom="@dimen/_32sdp" />
+            android:layout_marginBottom="@dimen/_70sdp" />
 
 
 
