--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,8 +23,8 @@
         app:lottie_rawRes="@raw/jokernow" />
     <com.google.android.material.button.MaterialButton
         android:id="@+id/getstartedbtn"
-        android:layout_width="@dimen/_174sdp"
-        android:layout_height="@dimen/_56sdp"
+        android:layout_width="@dimen/_200sdp"
+        android:layout_height="wrap_content"
         android:text="@string/lets_go"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:backgroundTint="#13C8C8"
