--- a/app/src/main/res/layout/fragment_jokes.xml
+++ b/app/src/main/res/layout/fragment_jokes.xml
@@ -13,14 +13,25 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".JokesFragment">
+        tools:context=".JokesFragment"
+        android:background="#DAD3B4"
+        >
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/joker_svgrepo_com"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
-            app:itemTextColor="@color/black"
-            app:itemIconTint="@color/black"
+            android:background="@drawable/gradient_background"
+            app:itemTextColor="@color/white"
+            app:itemIconTint="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:menu="@menu/bottom_navigation_menu"
             style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"/>
@@ -38,7 +49,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#FFEB3B">
+                android:background="@color/white">
 
                 <TextView
                     android:id="@+id/tv_generate_jokes"
@@ -86,7 +97,7 @@
                     android:id="@+id/btn_favorite"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_favorite_border_24"
+                    android:src="@drawable/ic_favorite_24"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     android:layout_margin="16dp"
@@ -121,15 +132,13 @@
             android:id="@+id/btn_Next"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/genarate_jokes"
-            android:textColor="@color/black"
-
-            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginHorizontal="32dp"
-            android:layout_marginBottom="@dimen/_70sdp" />
-
-
-
+            android:layout_marginBottom="108dp"
+            android:text="@string/genarate_jokes"
+            android:textColor="@color/white"
+            app:backgroundTint="#13C8C8"
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:layout_editor_absoluteX="32dp" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
